deployement_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: object-detection-deployment
  namespace: partha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: object-detection
  template:
    metadata:
      labels:
        app: object-detection
    spec:
      containers:
      - name: object-detection-container
        image: parthasarathysubburaj/k8s-object-detection:v1
        command: ['streamlit', 'run', 'app.py', '--server.port', '$(SL_PORT)', '--server.enableCORS', '$(SL_ENABLE_CORS)', '--server.baseUrlPath', '$(SL_BASE_URL)', '--server.address', '$(SL_SERVER_ADDRESS)']
        ports:
        - containerPort: 7500
        volumeMounts:
          - mountPath: "/workspace"
            name: pv-storage
      imagePullSecrets:
        - name: docker-registry-creds
      volumes:
        - name: pv-storage
          persistentVolumeClaim:
            claimName: object-detection-model-weights
