deployement_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: object-detection-service
  namespace: partha
spec:
  type: NodePort
  selector:
    app: object-detection
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 7500
      targetPort: 7500
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
